# zepy

./: .gitignore  LICENSE  README.md  pyproject.toml
app/api/: __init__.py  twitter.py
app/infra/: cache.py  graceful.py  idgen.py  logger.py  path.py  persistent.py  progress.py  rich_progress.py  utils.py  yml.py
app/telegram/: bot-help-command.txt  bot-start-command.txt  bot.py  client.py  configure.py  downloader.py  input.py  link_parser.py  media_types.py  singleton.py  state.py
app/twitter/: configure.py  downloader.py  executor.py  models.py  progress.py  singleton.py
