[project]
name = "td"
version = "0.1.0"
requires-python = ">= 3.10"
dependencies = [
    "twitter-openapi-python>=0.0.36,<0.0.37",
    "tweepy-authlib>=1.5.7,<2",
    "telethon>=1.39.0,<2", 
    "cryptg>=0.5.0.post0,<0.6",
]

[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]

[tool.pixi.workspace]
channels = ["conda-forge"]
platforms = ["osx-arm64"]

[tool.pixi.dependencies]
python = ">=3.13.2,<3.14"
pydash = ">=8.0.5,<9"
tqdm = ">=4.67.1,<5"
aiohttp = ">=3.11.16,<4"
python-socks = ">=2.7.1,<3"
rich = ">=14.0.0,<15"
pyyaml = ">=6.0.2,<7"
pickledb = ">=0.9.2,<0.10"

[tool.pixi.tasks]
bot = "python -m app.bin.start_telegram_bot"
twitter = "python -m app.bin.download_twitter_media"
telegram = "python -m app.bin.download_telegram_media"
